# app2_dockercompose_rust_vulkan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fragment_shader.glsl  setup.py  shader_compilation.py  vertex_shader.glsl
PythonVulkanDocker/: __init__.py  __main__.py  application.py  cli.py  command_buffer.py  config.py  debug.py  device.py  framebuffer.py  instance.py  pipeline.py  render_pass.py  shader.py  simple_app.py  surface.py  swapchain.py  sync.py  utils.py  vulkan_helper.py
PythonVulkanDocker/core/: cleanup.py  debug_messenger.py  init_vulkan.py  instance.py  logical_device.py  physical_device.py  surface.py
PythonVulkanDocker/memory/: buffer.py  memory_type.py  uniform_buffer.py
PythonVulkanDocker/rendering/: command_buffer.py  command_buffers.py  draw_frame.py  framebuffers.py  graphics_pipeline.py  image_views.py  pipeline.py  render_pass.py  swap_chain.py  sync_objects.py  triangle_renderer.py  vertex_buffer.py
PythonVulkanDocker/utils/: buffer_utils.py  helper_functions.py  shader_compilation.py  shader_hot_reload.py  shader_utils.py  vulkan_utils.py  vulkan_wrapper.py
examples/ch02/: implicit_func.wgsl  implicit_surface.rs  implicit_surface.wgsl  implicit_value.wgsl
examples/ch03/: metaball.rs  metaball_comp.wgsl
shaders/: frag.shader
src/: main.rs  renderer.rs  shader.rs  state.rs  terrain.rs
src/shaders/: marching_cubes.wgsl  shader.wgsl
vulkan_app/: __init__.py  config.py  main.py
vulkan_app/core/: __init__.py  cleanup.py  debug_messenger.py  init_vulkan.py  init_window.py  instance.py  logical_device.py  physical_device.py  surface.py
vulkan_app/memory/: __init__.py  buffer.py  buffer_copy.py  memory_type.py
vulkan_app/rendering/: __init__.py  command_buffers.py  command_pool.py  draw_frame.py  graphics_pipeline.py  render_pass.py  swap_chain.py  sync_objects.py  vertex_buffer.py
vulkan_app/utils/: __init__.py  shader_compilation.py  (+1 more)
