[package]
name = "app2_wgpu_project"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "25.0.2"
bytemuck = "1.23.1"
pollster = "0.3"  # For blocking on wgpu futures in async contexts
noise = "0.9.0"      # For Perlin noise generation